k8s/base/deploydock-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploydock-system
